# make-xuml-repo

./: .bumpversion.cfg  .gitignore  MANIFEST.in  README.md  pyproject.toml
metamodel/: class-attribute.xcm  computation.xcm  domain.xcm  ee.xcm  event.xcm  flow.xcm  mmdb.txt  nav.xcm  relational-action.xcm  type.xcm
src/make_xuml_repo/: __main__.py  exceptions.py  log.conf  metamodel.py
src/make_xuml_repo/layout/: action.mls  activity.mls  attribute-access.mls  class-attribute.mls  computation.mls  conditional-logic.mls  create-delete.mls  domain.mls  event.mls  external.mls  flow.mls  form.mls  method-call.mls  nav.mls  ref-action.mls  rel.mls  relational-action.mls  scalar-action.mls  select-action.mls  signal-action.mls  state.mls  type.mls
src/make_xuml_repo/metamodel/: action.xcm  activity.xcm  attribute-access.xcm  class-attribute.xcm  computation.xcm  conditional-logic.xcm  create-delete.xcm  domain.xcm  external.xcm  flow.xcm  iteration.xcm  method-call.xcm  mm_types.yaml  nav.xcm  ref-action.xcm  rel.xcm  relational-action.xcm  scalar-action.xcm  select-action.xcm  signal-action.xcm  state.xcm  type.xcm
src/metamodel/: action.xcm  form.xcm
