[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "make-xuml-repo"
version = "0.2.2"
description = "Generates a database from a set of *.xcm (executable class model) files"
readme = "README.md"
authors = [{ name = "Leon Starr", email = "leon_starr@modelint.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["action language", "executable uml", "mbse", "xuml", "xtuml", "platform independent", "sysml"]
dependencies = ["PyYAML", "xcm-parser", "mi-pyral", 'tomli; python_version < "3.11"']
requires-python = ">=3.11"

[project.optional-dependencies]
build = ["build", "twine"]
dev = ["bump2version", "pytest"]

[project.scripts]
makexumlrepo = "make_xuml_repo.__main__:main"

[project.urls]
repository    = "https://github.com/modelint/make-xuml-repo"
documentation = "https://github.com/modelint/make-xuml-repo/wiki"
